# weave

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  skills-lock.json
.agents/: manifest.json
.agents/skills/git-delivery/: README.md  README_ZH.md  SKILL.md
.agents/skills/git-delivery/evals/: evals.json
.agents/skills/repo-memory/: README.md  README_ZH.md  SKILL.md  rule.md
.agents/skills/spec-driven-coding/: README.md  README_ZH.md  SKILL.md
.agents/skills/ui-design/: README.md  README_ZH.md  SKILL.md
.github/workflows/: ci.yml
apps/desktop/: first-run.html  index.html  main.html  package.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: agent.rs  commands.rs  lib.rs  main.rs  storage.rs
data/profiles/: default.json
docs/: .state.md  .todo.md  architecture.md  phase-0-runtime-boundaries.md  project-structure.md  repository-rules.md  runtime-boundaries.md
docs/architecture/: phase-0.md
docs/decisions/: 0001-monorepo-electron-local-first.md  0001-runtime-split.md
docs/superpowers/plans/: 2026-05-10-weave-phase-0.md  2026-06-06-single-workspace-first-run.md
docs/superpowers/specs/: 2026-05-10-weave-phase-0-design.md  2026-06-06-single-workspace-first-run-design.md
services/agent/: pyproject.toml
services/agent/app/: __init__.py  main.py
services/agent/app/schemas/: __init__.py  writing.py
services/agent/tests/: test_api.py
(+35 files in other folders)
